# NaNL

./: .gitignore  CMakeLists.txt  README.md  main.cu  test.cu
performance-testing/: CMakeLists.txt  PerformanceTests.cu  main.cu
performance-testing/Matrix/: MatrixAddPerformanceTests.cu
performance-testing/MatrixAdditionPerfTests/: MatrixAdditionPerfTest.cu  MatrixAdditionPerfTest.cuh
performance-testing/data/: MATRIX_ADDITION_TEST_100x100  MATRIX_FILELOADER_TEST_SMALL
src/: CMakeLists.txt  empty.cu
src/Alignment/: BaseAlignment.cu  BaseAlignment.cuh  TensorCoreAligned128Bits.cu  TensorCoreAligned128Bits.cuh  TensorCoreAligned16.cu  TensorCoreAligned16.cuh  TensorCoreAligned32.cu  TensorCoreAligned32.cuh  TensorCoreAligned8.cu  TensorCoreAligned8.cuh  Unaligned.cu  Unaligned.cuh
src/BaseMatrix/: BaseMatrix.cu  BaseMatrix.cuh
src/CudaUtil/: CudaUtil.cuh
src/Kernels/: MatrixKernels.cu  MatrixKernels.cuh
src/Logger/: Logger.cu  Logger.cuh
src/Matrix/: BaseMatrix.cu  BaseMatrix.cuh  BaseMatrix2.cu  BaseMatrix2.cuh  Matrix.cu  Matrix.cuh  MatrixCuda.cu  MatrixFileLoader.cu  MatrixFileLoader.cuh  MatrixHost.cu  MatrixOperations.cu
src/Matrix/Alignment/: BaseAlignment.cu  BaseAlignment.cuh  Unaligned.cu  Unaligned.cuh
src/Matrix/CudaUtil/: CudaUtil.cuh
src/Matrix/Kernels/: MatrixKernels.cuh
src/Matrix/MatrixFileLoader/: MatrixBinaryFileLoader.cu  MatrixFileLoader.cu  MatrixFileLoader.cuh  MatrixInBinaryFileLoader.cu  MatrixInBinaryFileLoader.cuh  MatrixOutBinaryFileLoader.cuh
src/Matrix/MatrixPaged/: MatrixHost.cu
src/Matrix/MatrixPinned/: MatrixCuda.cu
src/Matrix/MatrixUtility/: MatrixTypeTraits.cuh  MatrixUtility.cu  MatrixUtility.cuh
src/Matrix/MemoryBlock/: PagedMemoryBlock.cu  PagedMemoryBlock.cuh
src/MemoryBlock/: BaseMemoryBlock.cu  BaseMemoryBlock.cuh  Deleters.cu  DeviceMemoryBlock.cu  DeviceMemoryBlock.cuh  HostMemoryBlock.cu  HostMemoryBlock.cuh  PagedMemoryBlock.cu  PagedMemoryBlock.cuh  PinnedMemoryBlock.cu  PinnedMemoryBlock.cuh
src/Padding/: Unaligned.cu
src/StaticBlock/: StaticBlock.cuh
src/ThreadPool/: ThreadPool.cu  ThreadPool.cuh
tests/: CMakeLists.txt
tests/tests/: BaseMatrixConstructorTestSuite.cu  BaseMatrixTestSuite.cu  MatrixAddSubtractTestSuite.cu  MatrixTestLoaderSuite.cu  ThreadPoolTestSuite.cu
tests/tests/Matrix/BaseMatrixTestSuite/: BaseMatrixTestSuite.cu
tests/tests/Matrix/MatrixArithmeticSuite/: MatrixPagedUnalignedAddTestSuite.cu  MatrixPinnedUnalignedAddTestSuite.cu
tests/tests/Matrix/MatrixArithmeticSuites/MatrixAddSuite/: MatrixAddSuite.cu  MatrixAddSuite.cuh  MatrixDeviceUnalignedAddTest.cu  MatrixPagedUnalignedAddTest.cu  MatrixPinnedUnalignedAddTest.cu
tests/tests/Matrix/MatrixArithmeticSuites/MatrixArithmeticRunner/: MatrixArithmeticRunner.cu
tests/tests/Matrix/MatrixArithmeticSuites/MatrixArithmeticUtility/: TestMatrices.cu  TestMatrices.cuh
tests/tests/Matrix/MatrixArithmeticSuites/MatrixCudaAddSuite/: MatrixCudaAddSuite.cu  MatrixCudaAddSuite.cuh  MatrixDeviceUnalignedCudaAddTest.cu  MatrixPagedTensorAligned32CudaAddTest.cu  MatrixPagedUnalignedCudaAddTest.cu  MatrixPinnedUnalignedCudaAddTest.cu
tests/tests/Matrix/MatrixArithmeticSuites/MatrixHostAddSuite/: MatrixDeviceTensorAlignedAddTest.cu  MatrixDeviceUnalignedAddTest.cu  MatrixHostAddSuite.cu  MatrixHostAddSuite.cuh  MatrixPagedTensorAlignedAddTest.cu  MatrixPagedUnalignedAddTest.cu  MatrixPinnedTensorAlignedAddTest.cu  MatrixPinnedUnalignedAddTest.cu
tests/tests/Matrix/MatrixArithmeticSuites/MatrixMultiCudaAddSuite/: MatrixMultiCudaAddSuite.cu  MatrixMultiCudaAddSuite.cuh  MatrixMultiCudaAddTest.cu
tests/tests/Matrix/MatrixConstructorSuite/: MatrixConstructorTestSuite.cu
tests/tests/Matrix/MatrixDataManipulationSuite/: MatrixDataManipulationSuite.cu
tests/tests/Matrix/MatrixDataManipulationSuite/MatrixDeviceMoveSuite/: MatrixDeviceMoveSuite.cu  MatrixDeviceMoveSuite.cuh  MatrixDeviceMoveTest.cu
tests/tests/Matrix/MatrixDataManipulationSuite/MatrixPagedCopySuite/: MatrixPagedCopySuite.cu  MatrixPagedCopySuite.cuh  MatrixPagedCopyTest.cu
tests/tests/Matrix/MatrixDataManipulationSuite/MatrixPinnedCopySuite/: MatrixPinnedCopySuite.cu  MatrixPinnedCopySuite.cuh  MatrixPinnedCopyTest.cu
tests/tests/Matrix/MatrixDataManipulationSuite/Util/: MatrixDataManipulationUtil.cuh
tests/tests/MatrixArithmeticSuite/: MatrixPagedUnalignedAddTestSuite.cu  MatrixPinnedUnalignedAddTestSuite.cu
tests/tests/MatrixConstructorSuite/: MatrixConstructorTestSuite.cu
